--- a/codigo-fonte/src/Login/login.html
+++ b/codigo-fonte/src/Login/login.html
@@ -13,7 +13,7 @@
         <div class="centered">
             <h1>IoT Unity</h1>
             <br>
-            <img src="http://source.unsplash.com/random/400x240" alt="IoT Unity">
+            <img src="../imagens/Logo 3.png" alt="IoT Unity">
             <!--trocar src da imagem para a da logo-->
         </div>
     </div>
