--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="../imagens/logo.jpeg"/></div>
+        <div class="logo"><img src="../imagens/Logo 3.png"/></div>
         <ul class="menu">
-            <li><a href="#">icon</a></li>
-            <li><a href="#">icon</a></li>
-            <li><a href="#">icon</a></li>
+            <li><a href="#"><img src="../imagens/Dispositivos.png" alt="dispositivos"><br>Dispositivos</a></li>
+            <li><a href="#"><img src="#" alt="#"><br>Ambientes</a></li>
+            <li><a href="#"><img src="#" alt="#"><br>Adicionar Marcador</a></li>
         </ul>
         <div class="profile-picture"></div>
     </header>
