--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -10,9 +10,10 @@
     <header>
         <div class="logo"><img src="../imagens/Logo 3.png"/></div>
         <ul class="menu">
-            <li><a href="#"><img src="../imagens/Dispositivos.png" alt="dispositivos"><br>Dispositivos</a></li>
-            <li><a href="#"><img src="#" alt="#"><br>Ambientes</a></li>
-            <li><a href="#"><img src="#" alt="#"><br>Adicionar Marcador</a></li>
+            <li><a href="#"><img src="../imagens/Dispositivos.png" alt="#"><br>Dispositivos</a></li>
+            <li><a href="#"><img src="../imagens/Ambientes.png" alt="#"><br>Ambientes</a></li>
+            <li><a href="#"><img src="../imagens/Config 2.png" alt="#"><br>Configurações</a></li>
+            <li><a href="#"><img src="../imagens/Add.png" alt="#"><br>Adcionar Marcador</a></li>
         </ul>
         <div class="profile-picture"></div>
     </header>
