Update Header e Left menu
Adicionado responsividade ao menu lateral e mudança de layout no Header

--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -10,28 +10,22 @@
     <header>
         <div class="logo"><img src="../imagens/Logo 3.png"/></div>
         <ul class="menu">
-            <li><a href="#"><img src="../imagens/Dispositivos.png" alt="#"><br>Dispositivos</a></li>
-            <li><a href="#"><img src="../imagens/Ambientes.png" alt="#"><br>Ambientes</a></li>
-            <li><a href="#"><img src="../imagens/Config 2.png" alt="#"><br>Configurações</a></li>
-            <li><a href="#"><img src="../imagens/Add.png" alt="#"><br>Adcionar Marcador</a></li>
+            <li><a title="Dispositivos" href="#"><img src="../imagens/Dispositivos.png" alt="#"></a></li>
+            <li><a title="Ambientes" href="#"><img src="../imagens/Ambientes.png" alt="#"></a></li>
+            <li><a title="Configurações" href="#"><img src="../imagens/Config 2.png" alt="#"></a></li>
+            <li><a title="Adcionar Marcador" href="#"><img src="../imagens/Add.png" alt="#"></a></li>
         </ul>
         <div class="profile-picture"></div>
     </header>
     <section class="dashboard">
         <div class="leftmenu">
             <div class="areanavbar"></div>
-            <div class="areadispositivo">
+            <div class="areainfo">
                 <div class="fotodispositivo"><img src="assets/Camera.png"></div>
-            </div>
-            <div class="areanome">
                 <h2>Nome do dispositivo</h2>
-                <input class="nometexto" type="text">
-            </div>
-            <div class="areadescricao">
+                <input type="text">
                 <h2>Descrição</h2>
-                <textarea rows="4" cols="50" class="descricao" ></textarea>
-            </div>
-            <div class="arealocal">
+                <textarea rows="4" cols="50"></textarea>
                 <h2>Localização</h2>
                 <select name="comodos">
                     <option value="" class="opcoes">Sala</option>
