Update Header e Leftmenu

--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -9,13 +9,13 @@
 <body>
     <header>
         <div class="logo"><img src="../imagens/Logo 3.png"/></div>
-        <ul class="menu">
-            <li><a title="Dispositivos" href="#"><img src="../imagens/Dispositivos.png" alt="#"></a></li>
-            <li><a title="Ambientes" href="#"><img src="../imagens/Ambientes.png" alt="#"></a></li>
-            <li><a title="Configurações" href="#"><img src="../imagens/Config 2.png" alt="#"></a></li>
-            <li><a title="Adcionar Marcador" href="#"><img src="../imagens/Add.png" alt="#"></a></li>
-        </ul>
-        <div class="profile-picture"></div>
+            <ul class="menu">
+                <li><a title="Dispositivos" href="#"><img src="../imagens/Dispositivos.png" alt="#"></a></li>
+                <li><a title="Ambientes" href="#"><img src="../imagens/Ambientes.png" alt="#"></a></li>
+                <li><a title="Configurações" href="#"><img src="../imagens/Config 2.png" alt="#"></a></li>
+                <li><a title="Adcionar Marcador" href="#"><img src="../imagens/Add.png" alt="#"></a></li>
+            </ul>
+        <a href="../usuario/usuario.html"><div class="profile-picture"></div></a>
     </header>
     <section class="dashboard">
         <div class="leftmenu">
@@ -25,7 +25,7 @@
                 <h2>Nome do dispositivo</h2>
                 <input type="text">
                 <h2>Descrição</h2>
-                <textarea rows="4" cols="50"></textarea>
+                <textarea rows="4" cols="40"></textarea>
                 <h2>Localização</h2>
                 <select name="comodos">
                     <option value="" class="opcoes">Sala</option>
