--- a/codigo-fonte/src/usuario/aparencia.html
+++ b/codigo-fonte/src/usuario/aparencia.html
@@ -21,9 +21,8 @@
             <ul class="submenu">
                 <li><a href="./usuario.html"><img class="icon" src="../imagens/conta-icon.png"/>Conta</a></li>
                 <li><a href="./meuplano.html"><img class="icon" src="../imagens/plano-icon.png"/>Meu Plano</a></li>
-                <li><a href="./dispositivos.html"><img class="icon" src="../imagens/dispostivos-icon.png"/>Dispositivos</a></li>
                 <li><a class="active" href="./aparencia.html"><img class="icon" src="../imagens/aparencia-icon.png"/>Aparência</a></li>
-                <li><a href="#">Sair</a></li>
+                <li><a href="../index.html">Sair</a></li>
             </ul>
         </div>
         <div class="content">
