--- a/codigo-fonte/src/index.html
+++ b/codigo-fonte/src/index.html
@@ -25,8 +25,8 @@
                     <li class="menu__li"><a href="#contato">Contato</a></li>
                 </ul>
                 <ul class="menu__login">
-                    <li class="login__li">Cadastre-se</li>
-                    <li class="login__li">Login</li>
+                    <li class="login__li"><a href="./Cadastro/cadastro.html">Cadastre-se</a></li>
+                    <li class="login__li"><a href="./Login/login.html">Login</a></li>
                 </ul>
             </nav>
         </div>
