--- a/codigo-fonte/src/usuario/dispositivos.html
+++ b/codigo-fonte/src/usuario/dispositivos.html
@@ -10,9 +10,7 @@
     <header>
         <div class="logo"><img src="../imagens/logo.jpeg"/></div>
         <ul class="menu">
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Planos</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="../Dashboard/dashboard.html">Dashboard</a></li>
         </ul>
         <div class="profile-picture"></div>
     </header>
