troca do header

--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -8,14 +8,10 @@
 </head>
 <body>
     <header>
-        <div class="logo"></div>
-        <ul class="menu">
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Planos</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
-        <div class="profile-picture"></div>
+        <div class="logo"><a href="../index.html"><img src="../imagens/Logo 3.png" alt=""></a>
+        </div>
     </header>
+
     <main class="cards">
         <section class="card ">
             <div class="icon">
