--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -40,7 +40,7 @@
     </main>
     <section>
         <details>
-            <summary>Lorem, ipsum dolor.</summary>
+            <summary>Quando fecha uma parcela ?.</summary>
             <div class="paragrafo">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
             </div>
