Update de padronização de fontes e cores

--- a/codigo-fonte/src/usuario/usuario.html
+++ b/codigo-fonte/src/usuario/usuario.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="../imagens/logo.jpeg"/></div>
+        <div class="logo"><img src="../imagens/Logo 3.png"/></div>
         <ul class="menu">
             <li><a href="../Dashboard/dashboard.html">Dashboard</a></li>
         </ul>
-        <div class="profile-picture"></div>
+        <a href="./usuario.html"><div class="profile-picture"><img src="../imagens/conta-icon.png" alt=""></div></a>
     </header>
     <section class="container">
         <div class="sidenav">
@@ -26,7 +26,7 @@
         <div class="content">
             <div class="titulo"><h2>Informações da conta</h2></div>
             <dl class="form">
-                <dt><label>Nome de usuário</label></dt>
+                <dt><label >Nome de usuário</label></dt>
                 <dd>
                   <div class="textbox"><p>Joel Onofre de São José Júnior</p></div>
                 </dd>
