--- a/codigo-fonte/src/usuario/aparencia.html
+++ b/codigo-fonte/src/usuario/aparencia.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="../imagens/logo.jpeg"/></div>
+        <div class="logo"><img src="../imagens/Logo 3.png"/></div>
         <ul class="menu">
             <li><a href="../Dashboard/dashboard.html">Dashboard</a></li>
         </ul>
-        <div class="profile-picture"></div>
+        <a href="./usuario.html"><div class="profile-picture"><img src="../imagens/conta-icon.png" alt=""></div></a>
     </header>
     <section class="container">
         <div class="sidenav">
