--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -43,7 +43,8 @@
             </div>
         </div>
         <div class="workarea">
-            <div class="ambientes">
+            <div class="ambientes" data-ambientes>
+                <button class="ambientes__botao" data-adicionar>Adicionar dispositivo +</button>
                 <div class="ambiente">
                     <span class="ambiente__titulo">
                         <h3>Sala</h3>
@@ -147,6 +148,7 @@
     </section>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script type="module" src="./adicionarAmbienteEDispositivo.js"></script>
 </body>
 <script src="https://kit.fontawesome.com/180a605619.js" crossorigin="anonymous"></script>
 </html>
