--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="./modal.css">
+    <link rel="stylesheet" href="./modal-dispositivo.css">
+    <script defer src="./crud-dispositivos.js"></script>
+    <script defer src="./funcoes.js"></script>
     <title>Dashboard</title>
 </head>
 <body>
@@ -14,7 +17,7 @@
                 <li><a title="Dispositivos" href="#"><img src="../imagens/Dispositivos.png" alt="#"></a></li>
                 <li><a title="Ambientes" href="#"><img src="../imagens/Ambientes.png" alt="#"></a></li>
                 <li><a title="Configurações" href="#"><img src="../imagens/Config 2.png" alt="#"></a></li>
-                <li><a title="Adcionar Marcador" href="#"><img src="../imagens/Add.png" alt="#"></a></li>
+                <li id="addDispositivo"><a title="Adcionar Dispositivo" href="#"><img src="../imagens/Add.png" alt="#"></a></li>
             </ul>
         <a href="../usuario/usuario.html"><div class="profile-picture"><img src="../imagens/conta-icon.png" alt=""></div></a>
     </header>
@@ -147,6 +150,35 @@
             </div>
         </div>
     </section>
+    <div id="modalTarefa" class="modal-dispositivo">
+        <div class="corpoModal">
+          <div class="headerModal">
+            <span id="fechaModal">&times;</span>
+            <h3>Dispositivo</h3>
+          </div>
+          <p>
+            <label for="campoDescricao">Nome: </label>
+            <input type="text" id="campoNome" />
+            <input type="hidden" id="campoID" />
+          </p>
+          <p>
+            <label for="campoData">Descrição: </label> <input type="text" id="campoDescricao" />
+          </p>
+          <p>
+            <label for="campoPrioridade">Localização: </label>
+            <select id="campoLocalizacao">
+              <option value="1">Sala</option>
+              <option value="2">Cozinha</option>
+              <option value="3">Garagem</option>
+              <option value="4">Quarto</option>
+            </select>
+          </p>
+          <p>
+            <button id="btMTCriar">Criar</button>
+            <button id="btMTCancelar">Cancelar</button>
+          </p>
+        </div>
+      </div>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script type="module" src="./adicionarAmbienteEDispositivo.js"></script>
