--- a/codigo-fonte/src/Cadastro/cadastro.html
+++ b/codigo-fonte/src/Cadastro/cadastro.html
@@ -1,59 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro</title>
-    <link rel="stylesheet" href="cadastro.css">
-  </head>
-  <body>
-    <h1 class="Centralizar">Cadastro de Usuário</h1>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Cadastro</title>
+<link rel="stylesheet" href="cadastro.css">
+</head>
+<body>
+<h1 class="Centralizar">Cadastro de Usuário</h1>
 
-    <form>
-      <div>
-        <label> Nome </label>
-        <input
-          type="text"
-          placeholder="Digite seu nome"
-          required
-          minlength="10"
-          maxlength="30"
-        />
-      </div>
-      <div>
-        <label> Email </label>
-        <input type="email" placeholder="Digite o seu email"/>
-      </div>
-      <div>
-        <label> Data de Nascimento </label>
-        <input 
-        type="date" 
-        placeholder="Insira sua data de nascimento" 
+<form id="cadastroForm">
+  <div>
+    <label> Nome </label>
+    <input
+      id="nome"
+      type="text"
+      placeholder="Digite seu nome"
+      required
+      minlength="10"
+      maxlength="30"
+    />
+  </div>
+  <div>
+    <label> Email </label>
+    <input id="email" type="email" placeholder="Digite o seu email"/>
+  </div>
+  <div>
+    <label> Data de Nascimento </label>
+    <input 
+    id="dataNascimento" 
+    type="date" 
+    placeholder="Insira sua data de nascimento" 
+    minlength="8"
+    maxlength="8" 
+    />
+    <div>
+      <label> Senha </label>
+      <input
+        id="senha"
+        type="password"
+        placeholder="Insira sua senha"
+        required
         minlength="8"
-        maxlength="8" 
-        />
-      </div>
-      <div>
-        <label> Senha </label>
-        <input
-          type="password"
-          placeholder="Insira sua senha"
-          required
-          minlength="8"
-        />
-      </div>
-      <div>
-        <label> Confirme sua senha </label>
-        <input
-          type="password"
-          placeholder="Confirme sua senha"
-          required
-          minlength="8"
-        />
-      </div>
-      <div>
-        <input type="submit" value="Cadastrar"/>
-      </div>
-    </form>
-  </body>
+      />
+      <button id="toggleSenha" type="button">Mostrar</button>
+    </div>
+    <div>
+      <label> Confirme sua senha </label>
+      <input
+        id="confirmacaoSenha"
+        type="password"
+        placeholder="Confirme sua senha"
+        required
+        minlength="8"
+      />
+      <button id="toggleConfirmacaoSenha" type="button">Mostrar</button>
+    </div>
+    
+    <div>
+      <button type="submit" value="Cadastrar" onclick="location.href='http://127.0.0.1:5500/pmv-ads-2024-1-e1-proj-web-t10-pmv-ads-2024-1-e1-proj-iot-unity/codigo-fonte/src/Login/login.html'" type="button">Cadastrar</button>
+  </div>
+</form>
+
+<script src="script.js"></script>
+</body>
 </html>
