--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -53,6 +53,7 @@
                     <span class="ambiente__titulo">
                         <h3>Sala</h3>
                         <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                        <img src="./assets/remove.png" alt="Icone remover" class="excluirAmbiente"> 
                     </span>
                     <span class="ambiente__dispositivos">
                         <span class="dispositivos__dispositivo">
@@ -69,6 +70,7 @@
                     <span class="ambiente__titulo">
                         <h3>Cozinha</h3>
                         <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                        <img src="./assets/remove.png" alt="Icone remover" class="excluirAmbiente"> 
                     </span>
                     <span class="ambiente__dispositivos">
                         <span class="dispositivos__dispositivo">
@@ -85,6 +87,7 @@
                     <span class="ambiente__titulo">
                         <h3>Quarto</h3>
                         <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                        <img src="./assets/remove.png" alt="Icone remover" class="excluirAmbiente"> 
                     </span>
                     <span class="ambiente__dispositivos">
                         <span class="dispositivos__dispositivo">
@@ -101,6 +104,7 @@
                     <span class="ambiente__titulo">
                         <h3>Garagem</h3>
                         <i class="fa-solid fa-gear"><span class="tooltip">Configurações</span></i>
+                        <img src="./assets/remove.png" alt="Icone remover" class="excluirAmbiente"> 
                     </span>
                     <span class="ambiente__dispositivos">
                         <span class="dispositivos__dispositivo">
@@ -182,6 +186,8 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script type="module" src="./adicionarAmbienteEDispositivo.js"></script>
+    <script src="deletar.js"></script>
+
 </body>
 <script src="https://kit.fontawesome.com/180a605619.js" crossorigin="anonymous"></script>
 </html>
