--- a/codigo-fonte/src/Planos/planos.html
+++ b/codigo-fonte/src/Planos/planos.html
@@ -6,7 +6,9 @@
     <title>=Planos</title>
     <link rel="stylesheet" href="planos.css">
     <link rel="stylesheet" href="modalplano.css">
-    <script src="modalplano.js"></script>
+    <link rel="stylesheet" href="faq.css">
+    <script defer src="modalplano.js"></script>
+    <script defer src="faq.js"></script>
 </head>
 <body>
     <header>
@@ -64,38 +66,64 @@
             <button onclick="abrirmodal()" class="saiba">Assine já</button>
         </section>
     </main>
-    <section>
-        <details>
-            <summary>Quando fecha uma parcela ?.</summary>
-            <div class="paragrafo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+    <section class="Faq">
+        <div class="faq">
+            <div class="questao">
+                <h3>A IoT Unity tem compatibilidade com todos os dispositivos inteligentes?</h3>
+
+                <svg width="15" height="10" viewBox="0 0 42 25">
+                    <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
+                </svg>
             </div>
-        </details>
-        <details>
-            <summary>Lorem, ipsum dolor.</summary>
-            <div class="paragrafo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+            <div class="resposta">
+                <p>
+                    Nosso site tem compatibilidade total com todos os tipos de fabricantes e dispositivos inteligentes.
+                </p>
             </div>
-        </details>
-        <details>
-            <summary>Lorem, ipsum dolor.</summary>
-            <div class="paragrafo">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p>
+        </div>
+
+        <section class="Faq">
+            <div class="faq">
+                <div class="questao">
+                    <h3>A IoT Unity presta serviços para quais tipos de clientes?</h3>
+    
+                    <svg width="15" height="10" viewBox="0 0 42 25">
+                        <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
+                    </svg>
+                </div>
+                <div class="resposta">
+                    <p>
+                        Nós atuamos nos segmentos domésticos e empresariais, provendo um serviço com profissionais capacitados para atuar em ambas as áreas.
+                    </p>
+                </div>
             </div>
-        </details>
-        <details>
-            <summary>Lorem, ipsum dolor.</summary>
-           <div class="paragrafo"> <p>Lorem ipsum dolor sit amet conseddctetur adipisicing elit. Nesciunt corporis eum quae libero architecto debitis!</p></div>
-        </details>
-        <div class="janela-modal" id="janela-modal">
+
+            <section class="Faq">
+                <div class="faq">
+                    <div class="questao">
+                        <h3>IOT UNITY tem compatibilidade com diversos fabricantes?</h3>
+        
+                        <svg width="15" height="10" viewBox="0 0 42 25">
+                            <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
+                        </svg>
+
+                    </div>
+                    <div class="resposta">
+                        <p>
+                            Nosso aplicativo tem compatibilidade total com todos os fabricantes de dispositivos inteligente.
+                        </p>
+                    </div>
+                </div>
+    </section>
+    <div class="janela-modal" id="janela-modal">
             <div class="modal">
                 <button class="fechar" id="fechar">X</button>
                 <h1>Assine</h1>
-                <div class="Assine">
+                <div class="Email">
                     <label> Email </label>
                     <input type="email" placeholder="Digite o seu email"/>
                 </div>
-                <div class="Assine">
+                <div class="Senha">
                     <label> Senha </label>
                     <input
                       type="password"
@@ -104,15 +132,16 @@
                       minlength="8"
                     />
                 </div>
-                <div class="Assine" id="senha">
-                    <input
+                <div class="Confirme-senha">
+                    <input class="Confirme"
                       type="password"
                       placeholder="Confirme sua senha"
                       required
                       minlength="8"
                     />
                 </div>
+                <button class="cadastro"><a href="../Cadastro/cadastro.html">Termine o cadastro</a></button>
             </div>
-        </div>
+        </div> 
 </body>
 </html>
