--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="dashboard.css">
     <link rel="stylesheet" href="./modal.css">
     <link rel="stylesheet" href="./modal-dispositivo.css">
+    <link rel="stylesheet" href="./modal-dispositivos.css">
     <script defer src="./crud-dispositivos.js"></script>
     <script defer src="./funcoes.js"></script>
     <title>Dashboard</title>
@@ -14,7 +15,7 @@
     <header>
         <div class="logo"><img src="../imagens/Logo 3.png"/></div>
             <ul class="menu">
-                <li><a title="Dispositivos" href="#"><img src="../imagens/Dispositivos.png" alt="#"></a></li>
+                <li id="listaDispositivos"><a title="Dispositivos" href="#"><img src="../imagens/Dispositivos.png" alt="#"></a></li>
                 <li><a title="Ambientes" href="#"><img src="../imagens/Ambientes.png" alt="#"></a></li>
                 <li><a title="Configurações" href="#"><img src="../imagens/Config 2.png" alt="#"></a></li>
                 <li id="addDispositivo"><a title="Adcionar Dispositivo" href="#"><img src="../imagens/Add.png" alt="#"></a></li>
@@ -154,7 +155,7 @@
             </div>
         </div>
     </section>
-    <div id="modalTarefa" class="modal-dispositivo">
+    <div id="modalDispositivo" class="modal-dispositivo">
         <div class="corpoModal">
           <div class="headerModal">
             <span id="fechaModal">&times;</span>
@@ -171,10 +172,10 @@
           <p>
             <label for="campoPrioridade">Localização: </label>
             <select id="campoLocalizacao">
-              <option value="1">Sala</option>
-              <option value="2">Cozinha</option>
-              <option value="3">Garagem</option>
-              <option value="4">Quarto</option>
+              <option value="Sala">Sala</option>
+              <option value="Cozinha">Cozinha</option>
+              <option value="Garagem">Garagem</option>
+              <option value="Quarto">Quarto</option>
             </select>
           </p>
           <p>
@@ -183,6 +184,29 @@
           </p>
         </div>
       </div>
+    <div id="modalDispositivos" class="modal-dispositivos">
+        <h1>Dispositivos</h1>
+        <Table>
+            <thead>
+                <tr>
+                    <th id="col1" class="coluna1">Dispositivo</th>
+                    <th id="col2" class="coluna2">Localização</th>
+                    <th id="col3" class="coluna3">Descrição</th>
+                </tr>
+            </thead>
+            <tbody id="conteudoDispositivos"></tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4">
+                        <button id="btEditar" class="botao">Editar</button>
+                        <button id="btExcluir" class="botao">Excluir</button>
+                      </td>
+                </tr>
+            </tfoot>
+        </Table>
+
+
+    </div>  
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script type="module" src="./adicionarAmbienteEDispositivo.js"></script>
