update lista dispositivos
Adicionado formatação para estilos da lista

--- a/codigo-fonte/src/Dashboard/dashboard.html
+++ b/codigo-fonte/src/Dashboard/dashboard.html
@@ -185,25 +185,29 @@
         </div>
       </div>
     <div id="modalDispositivos" class="modal-dispositivos">
-        <h1>Dispositivos</h1>
-        <Table>
-            <thead>
-                <tr>
-                    <th id="col1" class="coluna1">Dispositivo</th>
-                    <th id="col2" class="coluna2">Localização</th>
-                    <th id="col3" class="coluna3">Descrição</th>
-                </tr>
-            </thead>
-            <tbody id="conteudoDispositivos"></tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="4">
-                        <button id="btEditar" class="botao">Editar</button>
-                        <button id="btExcluir" class="botao">Excluir</button>
-                      </td>
-                </tr>
-            </tfoot>
-        </Table>
+        <div class="corpoModal2">
+            <span id="fechaModal2">&times;</span>
+            <h1>Dispositivos</h1>
+            <Table>
+                <thead>
+                    <tr>
+                        <th class="selecao"></th>
+                        <th id="col1" class="coluna1">Dispositivo</th>
+                        <th id="col2" class="coluna2">Localização</th>
+                        <th id="col3" class="coluna3">Descrição</th>
+                    </tr>
+                </thead>
+                <tbody id="conteudoDispositivos"></tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="4">
+                            <button id="btEditar" class="botao">Editar</button>
+                            <button id="btExcluir" class="botao">Excluir</button>
+                        </td>
+                    </tr>
+                </tfoot>
+            </Table>
+        </div>
 
 
     </div>  
